# AVP-bridge

./: README.md  calculate_rectangle.py  parkingspace_rot.py  testcontrol.py  testfeedback.py  testid.py  testmqtt.py
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/devel/lib/pkgconfig/: clustering_and_tracking.pc
catkin_ws/devel/share/clustering_and_tracking/cmake/: clustering_and_trackingConfig.cmake
catkin_ws/src/clustering_and_tracking/: CMakeLists.txt
catkin_ws/src/clustering_and_tracking/launch/: ros_perception_info.launch
catkin_ws/src/clustering_and_tracking/scripts/: ros_perception_info.py
